--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,15 +77,17 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  outline-style: none !important;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -93,15 +95,184 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+body {
+  color: #666;
+  background: #fff
 }
 
-a {
+a , button {
   color: inherit;
   text-decoration: none;
+  transition: all ease-in-out .4s;
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.form-check-input:checked {
+  background-color: #32D5F9 !important;
+  border: #32D5F9 1px solid !important;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+
+.react-date-picker__wrapper{
+  border: none !important;
+  
+}
+
+.react-date-picker__wrapper svg{
+  fill: none;
+  stroke-width: 1;
+  stroke: #32D5F9;
+}
+body{
+  font-family: 'Maven Pro';
+}
+
+.custom {
+  margin-right: 20px;
+}
+.custom.checkbox > label,
+.custom.radio > label {
+  position: relative;
+  cursor: pointer;
+  padding-left: 32px;
+  color: #034265;
+  font-weight: 500;
+  font-size: 17px;
+}
+.custom input[type="checkbox"],
+.custom input[type="radio"] {
+  position: relative;
+  margin-left: -26px;
+  margin-right: 12px;
+  cursor: pointer;
+}
+.custom input[type="checkbox"]:after,
+.custom input[type="radio"]:after {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -4px;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border: 1px solid #034265;
+  cursor: pointer;
+}
+.custom input[type="checkbox"]:before {
+  transition: transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+  transform: rotate(-45deg) scale(0, 0);
+  content: "";
+  position: absolute;
+  left: 1px;
+  z-index: 1;
+  width: 10px;
+  height: 5.5px;
+  border: 2px solid #034265;
+  border-top-style: none;
+  border-right-style: none;
+}
+.custom input[type="checkbox"]:checked:before {
+  transform: rotate(-45deg) scale(1, 1);
+}
+.custom input[type="checkbox"]:after {
+  border-radius: 6px;
+}
+.custom input[type="radio"] {
+  top: -2px;
+}
+.custom input[type="radio"]:before {
+  transition: transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+  transform: scale(0, 0);
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  z-index: 1;
+  width: 12px;
+  height: 12px;
+  background: #034265;
+  border-radius: 50%;
+}
+.custom input[type="radio"]:checked:before {
+  transform: scale(1, 1);
+}
+.custom input[type="radio"]:after {
+  border-radius: 50%;
+  top: -3px;
+}
+.tabArea ul li a.nav-link {
+  color: #849096;
+  font-weight: 600;
+}
+.tabArea ul li .nav-link.active {
+  color: #034265 !important;
+}
+
+h1,h2,h3,h4,h5,h6{
+  color: #034265;
+  font-weight: bold;
+  margin-bottom: 0.625rem;
+}
+
+.react-date-picker {
+  width: 100%;
+}
+
+.react-date-picker__inputGroup {
+  font-weight: 700;
+  color: #034265;
+}
+ul , p{
+  padding: 0;
+  margin: 0;
+}
+
+.destinationsSection .owl-prev ,
+.destinationsSection .owl-next{
+  position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: unset;
+    border-radius: 50% !important;
+    padding: 0 !important;
+    background: #fff !important;
+    color: #000 !important;
+    border: #eee 1px solid;
+    transition: all ease-in-out .4s;
+}
+
+.destinationsSection .owl-prev:hover ,
+.destinationsSection .owl-next:hover{
+    background: #034265 !important;
+    color: #fff !important;
+    border-color: #034265 ;
+}
+
+.destinationsSection .owl-prev {
+  left: 0;
+}
+.destinationsSection .owl-next{
+  right: 0;
+}
+
+.destinationsSection .owl-prev span ,
+.destinationsSection .owl-next span{
+  font-size: 36px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  line-height: 34px;
+  border-radius: 50%;
 }
